force-app/main/default/objects/TestDriveSlot__c/TestDriveSlot__c.object-meta.xml
<CustomObject>
    <label>예약 가능 시간 슬롯</label>
    <nameField>
        <label>예약 가능 시간 슬롯 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>예약 가능 시간 슬롯</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>