force-app/main/default/objects/TestDriveSlot__c/fields/AssignedStaff__c.field-meta.xml
<CustomField>
    <fullName>AssignedStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>시승 담당 직원</label>
    <referenceTo>TestDriveStaff__c</referenceTo>
    <relationshipLabel>예약 가능 시간 슬롯</relationshipLabel>
    <relationshipName>AvailableTimeSlot</relationshipName>
    <type>Lookup</type>
</CustomField>