force-app/main/default/objects/TestDriveSlot__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>해당 슬롯의 날짜</description>
    <label>날짜</label>
    <type>Date</type>
</CustomField>