force-app/main/default/objects/TestDriveSlot__c/fields/DayCode__c.field-meta.xml
<CustomField>
    <fullName>DayCode__c</fullName>
    <label>요일</label>
    <length>60</length>
    <type>Text</type>
</CustomField>