force-app/main/default/objects/TestDriveSlot__c/fields/DriveMethod__c.field-meta.xml
<CustomField>
    <fullName>DriveMethod__c</fullName>
    <description>셀프 or 동승 선택</description>
    <label>시승 방법</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>