force-app/main/default/objects/TestDriveSlot__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>슬롯 종료 시간</description>
    <label>종료 시간</label>
    <type>Time</type>
</CustomField>