force-app/main/default/objects/TestDriveSlot__c/fields/FlagshipStore__c.field-meta.xml
<CustomField>
    <fullName>FlagshipStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>플래그십 스토어</label>
    <referenceTo>Flagship_Store__c</referenceTo>
    <relationshipLabel>예약 가능 시간 슬롯</relationshipLabel>
    <relationshipName>AvailableTimeSlot</relationshipName>
    <type>Lookup</type>
</CustomField>