force-app/main/default/objects/TestDriveSlot__c/fields/isAvailable__c.field-meta.xml
<CustomField>
    <fullName>isAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>예약 가능 여부</label>
    <type>Checkbox</type>
</CustomField>