force-app/main/default/objects/TestDriveSlot__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>슬롯 시작 시간</description>
    <label>시작 시간</label>
    <type>Time</type>
</CustomField>