force-app/main/default/objects/TestDriveSlot__c/fields/VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>VehicleModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>시승 차량</description>
    <label>시승 모델</label>
    <referenceTo>VehicleModel__c</referenceTo>
    <relationshipLabel>예약 가능 시간 슬롯</relationshipLabel>
    <relationshipName>AvailableTimeSlot</relationshipName>
    <type>Lookup</type>
</CustomField>